--- a/assets/css/bootstrap1.css
+++ b/assets/css/bootstrap1.css
@@ -3333,7 +3333,7 @@ select[multiple].input-group-sm>.form-control, select[multiple].input-group-sm>.
     margin-right: 0;
 }
 }.navbar-default {
-    background-color: #297D71;   /*############navbar color############*/
+    background-color: #f8f8f8;
     border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
